<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="24dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:src="@drawable/cardapio"
        android:contentDescription="@string/imagem_de_card_pio"
        android:scaleType="centerCrop" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Seu Nome"
        android:layout_marginTop="16dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputNome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/escolha_seu_lanche"
        android:layout_marginTop="16dp"/>

    <RadioGroup
        android:id="@+id/grupoLanches"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioButton android:id="@+id/lanche1" android:text="@string/x_burguer" android:layout_height=""/>
        <RadioButton android:id="@+id/lanche2" android:text="@string/x_salada"/>
        <RadioButton android:id="@+id/lanche3" android:text="@string/x_bacon"/>
    </RadioGroup>

    <Button
        android:id="@+id/btnConfirmar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirmar_pedido"
        android:layout_marginTop="24dp"/>
</LinearLayout>
